Retrotranslator Changelog
=================================

1.2.3
---------------------------------
  - Support for Java 5 methods of java.util.Properties.
  - Limited support for java.lang.Thread.getState() and java.lang.Thread.getAllStackTraces().
  - Limited support for Java 5 methods of java.net.URLConnection and java.net.HttpURLConnection.
  - Limited support for java.util.Timer(String), java.util.Timer(String, boolean), java.util.Timer.purge().
  - Support for Java 5 methods of javax.net.ssl.HttpsURLConnection.

1.2.2 (2007-06-25)
---------------------------------
  - Support for java.math.BigInteger.TEN.
  - Support for java.lang.Short.reverseBytes(short).
  - Support for java.lang.StackTraceElement(String, String, String, int).
  - Support for the append methods of java.io.StringWriter and java.io.CharArrayWriter.
  - Support for java.math.BigDecimal(char[]) and java.math.BigDecimal(char[], int, int). 
  - Limited support for java.lang.StringBuffer.trimToSize().
  - Limited support for java.lang.Thread.UncaughtExceptionHandler.
  - Limited support for java.nio.charset.Charset.defaultCharset().
  - Limited support for java.lang.management.ManagementFactory.getPlatformMBeanServer().
  - New option -support to enable advanced features one by one.
  - New option -uptodatecheck to skip translation of files if the destination files are newer.
  - Changed the messages printed during translation.
  - Fixed a bug with using enum values when initializing static fields of the same enum.

1.2.1 (2007-02-01)
---------------------------------
  - Support for java.util.Deque and java.util.ArrayDeque.
  - Support for java.util.Arrays.copyOf(...) and java.util.Arrays.copyOfRange(...).
  - Limited support for UNICODE-related methods of Character, String, and StringBuffer.
  - The -backport option accepts individual classes and is used even when -retainapi is specified.

1.2.0 (2007-01-10)
  WARNING: This release is not fully compatible with the previous one.