@@ -143,7 +143,7 @@ and concurrency utilities
     </tr>
     <tr>
         <td nowrap><code>-embed &lt;package&gt;</code></td>
-        <td>The package name for a private copy of <code>retrotranslator-runtime-<i>n.n.n</i>.jar</code> and
+        <td>The package name for a private partial copy of <code>retrotranslator-runtime-<i>n.n.n</i>.jar</code> and
             <code>backport-util-concurrent-<i>n.n</i>.jar</code> to be put into <code>-destdir</code> or <code>-destjar</code>.
             This makes your application independent of other versions of Retrotranslator present in the classpath.
             </td>
@@ -274,7 +274,7 @@ and concurrency utilities
     </tr>
     <tr>
         <td><code>embed</code></td>
-        <td>The package name for a private copy of <code>retrotranslator-runtime-<i>n.n.n</i>.jar</code> and
+        <td>The package name for a private partial copy of <code>retrotranslator-runtime-<i>n.n.n</i>.jar</code> and
             <code>backport-util-concurrent-<i>n.n</i>.jar</code> to be put into <code>-destdir</code> or <code>-destjar</code>.
             This makes your application independent of other versions of Retrotranslator present in the classpath.
             </td>
