@@ -59,6 +59,8 @@ abstract class FileContainer {
 
     public abstract boolean containsUpToDate(String name, long sourceTime);
 
+    public abstract long lastModified();
+
     protected static byte[] readFully(InputStream stream, int length) throws IOException {
         if (length <= 0) length = 0x8000;
         byte[] buffer = new byte[length];
