@@ -4,10 +4,11 @@ Retrotranslator Changelog
 1.2.3
 ---------------------------------
   - Support for Java 5 methods of java.util.Properties.
+  - Support for Java 5 methods of javax.net.ssl.HttpsURLConnection.
   - Limited support for java.lang.Thread.getState() and java.lang.Thread.getAllStackTraces().
   - Limited support for Java 5 methods of java.net.URLConnection and java.net.HttpURLConnection.
   - Limited support for java.util.Timer(String), java.util.Timer(String, boolean), java.util.Timer.purge().
-  - Support for Java 5 methods of javax.net.ssl.HttpsURLConnection.
+  - Improved the -uptodatecheck functionality, especially when translating jars.
 
 1.2.2 (2007-06-25)
 ---------------------------------
